# iris_pipeline

./: .gitignore  .gitmodules  .rtd-environment.yml  .travis.yml  MANIFEST.in  Makefile  README.md  README.rst  ingest_crds_example.sh  pytest.ini  readthedocs.yml  requirements.txt  run_tests.sh  setup.cfg  setup.py  setup_local_crds.py  setup_local_crds.sh  test-requirements.txt  test_asn.json
.github/: dependabot.yml
.github/workflows/: python-package.yml
docs/: algorithms.md  algorithms.rst  available-steps.rst  calibration-database.rst  conf.py  design.md  design.rst  drsrop_pipeline.rst  example-run.ipynb  example-run.md  example-run.rst  getting-started.rst  index.rst  package-index.rst  package_index.rst  requirements.txt  subarrays.rst
docs/_templates/: localtoc.html  page.html  versioning.html
docs/assign_wcs/: asdf-howto.rst  exp_types.rst  index.rst  main.rst  reference_files.rst
docs/background/: arguments.rst  description.rst  index.rst  reference_files.rst
docs/dark_current/: description.rst  index.rst  reference_files.rst
docs/dq_init/: description.rst  index.rst  reference_files.rst
docs/flatfield/: arguments.rst  index.rst  main.rst  reference_files.rst
docs/iris_pipeline/: index.rst
docs/merge_subarrays/: index.rst
docs/normalize/: arguments.rst  description.rst  index.rst  reference_files.rst
docs/parse_subarray_map/: index.rst
docs/pipeline/: image2.rst  index.rst  main.rst  preprocess_flatfield.rst
iris_pipeline/: __init__.py  scripts.py
iris_pipeline/assign_wcs/: assign_wcs.py  assign_wcs_step.py  util.py
iris_pipeline/background/: __init__.py  background_step.py  background_sub.py  subtract_images.py  subtract_images_step.py
iris_pipeline/dark_current/: dark_current_step.py  dark_sub.py
iris_pipeline/datamodels/: __init__.py  dark.py  extension.py  iris.py  model_base.py  tmt_mask.py  tmt_ramp.py  tmt_reference.py
iris_pipeline/datamodels/schemas/: dark.schema.yaml  iris_cube.schema.yaml  iris_image.schema.yaml  referencefile.schema.yaml  tmt_core.schema.yaml  tmt_ramp.schema.yaml
iris_pipeline/dq_init/: dq_init_step.py
iris_pipeline/drsrop_clib/: __init__.py  _drsrop_clib.pyx  drsrop_clib.c  drsrop_clib.pyx
iris_pipeline/flatfield/: flat_field.py  flat_field_step.py
iris_pipeline/iris_readout/: drsrop.c
iris_pipeline/merge_subarrays/: __init__.py  merge_subarrays.py
iris_pipeline/normalize/: __init__.py  normalize.py  normalize_step.py
iris_pipeline/parse_subarray_map/: parse_subarray_map_step.py
iris_pipeline/pipeline/: __init__.py  image2.py  preprocess_flatfield.py  rop.py
iris_pipeline/readout/: __init__.py  generate_ramp.py  nonlincorr_step.py  readoutsamp_step.py
iris_pipeline/readout/tests/: run.py  sample_ramp.fits
iris_pipeline/resample/: resample.py  resample_spec.py  resample_spec_step.py  resample_step.py  resample_utils.py
iris_pipeline/tests/: run_image2_subarray.ipynb  test_april.py  test_assign_wcs.ipynb  test_create_subarray_dataset.ipynb  test_dark.ipynb  test_dark_subarray.ipynb  test_flat.ipynb  test_image2.py  test_normalize.ipynb  test_parse_subarray_map.ipynb  test_preprocess_flatfield.ipynb  test_rop.py  test_utils.py
iris_pipeline/tests/data/: asn_subtract_bg_flat.json  drsrop.cfg  flat_field.cfg  (+4 more)
iris_pipeline/utils/: subarray.py
licenses/: LICENSE.rst
liger_iris_pipeline/: __init__.py  scripts.py
liger_iris_pipeline/assign_wcs/: assign_wcs.py  assign_wcs_step.py
liger_iris_pipeline/background/: background_sub.py  subtract_images_step.py
liger_iris_pipeline/dark_current/: dark_current_step.py
liger_iris_pipeline/datamodels/: __init__.py  cube.py  dark.py  flat.py  integration.py  liger_iris_image.py  mask.py  model_base.py  ramp.py  reference.py
liger_iris_pipeline/dq_init/: dq_init_step.py  dq_initialization.py
liger_iris_pipeline/flatfield/: flat_field_step.py
liger_iris_pipeline/merge_subarrays/: merge_subarrays.py
liger_iris_pipeline/normalize/: normalize.py  normalize_step.py
liger_iris_pipeline/parse_subarray_map/: __init__.py  parse_subarray_map_step.py
liger_iris_pipeline/pipeline/: image2.py  preprocess_flatfield.py  rop.py
liger_iris_pipeline/readout/: __init__.py  nonlincorr_step.py  readoutsamp_step.py
liger_iris_pipeline/stpipe/: __init__.py  step.py
liger_iris_pipeline/tests/: run_image2_subarray.ipynb  test_asdf_schema.py  test_assign_wcs.py  test_dark.ipynb  test_dark.py  test_dark_subarray.py  test_datamodels.py  test_flat.ipynb  test_image2.py  test_merge_subarrays.ipynb  test_merge_subarrays.py  test_normalize.py  test_parse_subarray_map.py  test_preprocess_flatfield.ipynb  test_preprocess_flatfield.py  test_rop.py  test_utils.py
liger_iris_pipeline/utils/: subarray.py
scripts/: tmtrun
(+18 files in other folders)
