[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
#addopts = -p no:warnings
#addopts = --nbval-lax

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py

[metadata]
name = iris_pipeline
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 0.2.0
description = Data Reduction System (DRS) for the Thirty Meter Telescope IRIS imager/spectrograph
long_description = 
author = Andrea Zonca, Arun Surya
author_email = 
license = BSD 3-Clause
url = https://github.com/oirlab/iris_pipeline
edit_on_github = True
github_project = oirlab/iris_pipeline
# install_requires should be formatted as a comma-separated list, e.g.:
# install_requires = astropy, scipy, matplotlib
install_requires = astropy
# Note: you will also need to change this in your package's __init__.py
minimum_python_version = 3.6

[options.package_data]
* = *.c
iris_pipeline = data/*
iris_pipeline.tests = coveragerc,data/*
iris_pipeline.datamodels.schemas = *.yaml

[options.entry_points]
asdf_extensions =
    model_extensions = iris_pipeline.datamodels.extension:BaseExtension
