[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build iris_pipeline/tests/data iris_pipeline/tests/.ipynb_checkpoints
doctest_plus = enabled
addopts = --nbval-lax --current-env
testpaths =
    iris_pipeline/tests

[metadata]
name = iris_pipeline
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 0.4.dev
description = Data Reduction System (DRS) for the Thirty Meter Telescope IRIS imager/spectrograph
long_description =
author = Andrea Zonca, Arun Surya
author_email =
license = BSD 3-Clause
url = https://github.com/oirlab/iris_pipeline
edit_on_github = True
github_project = oirlab/iris_pipeline
# install_requires should be formatted as a comma-separated list, e.g.:
# install_requires = astropy, scipy, matplotlib
install_requires = astropy
# Note: you will also need to change this in your package's __init__.py
minimum_python_version = 3.6

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.6
packages = iris_pipeline

setup_requires =
    setuptools >=38.3.0     # version with most `setup.cfg` bugfixes

[options.package_data]
* = *.c
iris_pipeline = data/*
iris_pipeline.tests = coveragerc,data/*
iris_pipeline.datamodels.schemas = *.yaml

[options.entry_points]
asdf_extensions =
    model_extensions = iris_pipeline.datamodels.extension:BaseExtension
console_scripts =
    tmtrun = iris_pipeline.scripts:tmtrun
