[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build liger_iris_pipeline/tests/data liger_iris_pipeline/tests/.ipynb_checkpoints
doctest_plus = enabled
addopts = --nbval-lax --current-env
testpaths =
    liger_iris_pipeline/tests

[metadata]
name = liger_iris_pipeline
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = attr: liger_iris_pipeline.__version__
description = Data Reduction System (DRS) for the Thirty Meter Telescope IRIS imager/spectrograph
long_description =
author = Andrea Zonca, Arun Surya, Bryson Cale
author_email =
license = BSD 3-Clause
url = https://github.com/oirlab/liger_iris_pipeline
edit_on_github = True
github_project = oirlab/liger_iris_pipeline
# install_requires should be formatted as a comma-separated list, e.g.:
# install_requires = astropy, scipy, matplotlib
install_requires = astropy
# Note: you will also need to change this in your package's __init__.py
minimum_python_version = 3.6

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.6
packages = liger_iris_pipeline

setup_requires =
    setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
    numpy
    Cython

[options.package_data]
* = *.c
liger_iris_pipeline = data/*
liger_iris_pipeline.tests = coveragerc,data/*
liger_iris_pipeline.datamodels.schemas = *.yaml

[options.entry_points]
asdf_extensions =
    model_extensions = liger_iris_pipeline.datamodels.extension:BaseExtension
console_scripts =
    lirun = liger_iris_pipeline.scripts:lirun
asdf.resource_mappings =
    liger_iris_datamodels = liger_iris_pipeline.datamodels.integration:get_resource_mappings